[metadata]
name = blaster
version = 0.4.0
description = Blast off a list of tasks calling each tasks methods defined
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryankwilliams/blaster
author = Ryan Williams
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    = .
